test/errhandling/modes/implicit-relaxed-try-nothrows-inner.good
implicit-relaxed-try-nothrows-inner.chpl:5: In function 'propError':
implicit-relaxed-try-nothrows-inner.chpl:6: error: call to throwing function throwAnError without throws, try, or try! (relaxed mode)
../ExampleErrors.chpl:1: note: throwing function throwAnError defined here
